Correct text sizing on mobile floating bar overview when dates selected

--- a/src/targets/meandall/styles/views/floating-bar.less
+++ b/src/targets/meandall/styles/views/floating-bar.less
@@ -61,6 +61,8 @@ floating-bar {
           a {
             &.with-search-params {
               background: @c-tertiary;
+              font-size: 0.9em;
+              line-height: 27px;
             }
             .mobile {}
           }
